Bug 327366 - Muon does not apply the same action for all selected packages
Summary: Muon does not apply the same action for all selected packages
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 2.1.1
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Volkan
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-11-09 14:31 UTC by Volkan
Modified: 2013-12-23 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volkan 2013-11-09 14:31:38 UTC
Muon has a feature to choose multiple packages and apply the same action to all, but when I do the followings, it does not apply to all only the last selected item.

Reproducible: Always

Steps to Reproduce:
1. Open Muon
2. Select multiple packages using Ctrl or shift+click
3. Click on Apply action to selected packages: "Remove"
Actual Results:  
It applies to only the last selected item in the list.

Expected Results:  
It should apply this to all selected items.
Comment 1 Volkan 2013-12-23 14:53:36 UTC
Git commit 16bab0472cbfc346814835ffb0a640eea8bbd88b by Volkan Gezer.
Committed on 23/12/2013 at 14:50.
Pushed by vgezer into branch 'master'.

Fix two bugs regarding to multiple selection

This patch should solve issues related to multiple selection:
Solves right click issue when only one item status has changed and
disables install/remove button on DetailsWidget when multiple selection
is made since this button only installs one of the selections and causes
confusions.
Related: bug 328737, bug 328737
CCMAIL: volkangezer@gmail.com
REVIEW: 114630

M  +1    -1    CMakeLists.txt
M  +15   -3    muon/DetailsTabs/MainTab.cpp
M  +2    -0    muon/DetailsTabs/MainTab.h
M  +7    -0    muon/DetailsWidget.cpp
M  +2    -0    muon/DetailsWidget.h
M  +5    -0    muon/PackageModel/PackageView.cpp
M  +1    -0    muon/PackageModel/PackageView.h
M  +26   -5    muon/PackageModel/PackageWidget.cpp

http://commits.kde.org/muon/16bab0472cbfc346814835ffb0a640eea8bbd88b
Comment 2 Volkan 2013-12-23 14:53:37 UTC
Git commit 16bab0472cbfc346814835ffb0a640eea8bbd88b by Volkan Gezer.
Committed on 23/12/2013 at 14:50.
Pushed by vgezer into branch 'master'.

Fix two bugs regarding to multiple selection

This patch should solve issues related to multiple selection:
Solves right click issue when only one item status has changed and
disables install/remove button on DetailsWidget when multiple selection
is made since this button only installs one of the selections and causes
confusions.
Related: bug 328737, bug 328737
CCMAIL: volkangezer@gmail.com
REVIEW: 114630

M  +1    -1    CMakeLists.txt
M  +15   -3    muon/DetailsTabs/MainTab.cpp
M  +2    -0    muon/DetailsTabs/MainTab.h
M  +7    -0    muon/DetailsWidget.cpp
M  +2    -0    muon/DetailsWidget.h
M  +5    -0    muon/PackageModel/PackageView.cpp
M  +1    -0    muon/PackageModel/PackageView.h
M  +26   -5    muon/PackageModel/PackageWidget.cpp

http://commits.kde.org/muon/16bab0472cbfc346814835ffb0a640eea8bbd88b