Fix two bugs regarding to multiple selection

This patch should solve issues related to multiple selection:
Solves right click issue when only one item status has changed and
disables install/remove button on DetailsWidget when multiple selection
is made since this button only installs one of the selections and causes
confusions.

BUG: 327366
BUG: 328737
CCBUG: 327366
CCBUG: 328737
CCMAIL: volkangezer@gmail.com
REVIEW: 114630